--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.GetUserTexts"></activity>
-        <activity android:name=".ui.LastPageActivity"></activity>
+        <activity android:name=".ui.SavedStoriesActivity"></activity>
+        <activity android:name=".ui.GetUserTexts" />
+        <activity android:name=".ui.LastPageActivity" />
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,4 +20,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
