--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.SavedStoriesActivity"></activity>
+        <activity android:name=".ui.SavedActivity"></activity>
+        <activity android:name=".ui.SavedStoriesActivity" />
         <activity android:name=".ui.GetUserTexts" />
         <activity android:name=".ui.LastPageActivity" />
         <activity android:name=".ui.MainActivity">
