Dev Libs Sharable
add share button, now able to share across desired platforms

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".ui.SavedStoriesActivity" />
         <activity android:name=".ui.GetUserTexts" />
         <activity android:name=".ui.LastPageActivity" />
+        <activity android:name=".view.AlsCustomView"/>
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
