--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".ui.SavedStoriesActivity"></activity>
         <activity android:name=".ui.GetUserTexts" />
         <activity android:name=".ui.LastPageActivity" />
+        <activity android:name=".ui.Register"/>
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
